k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3005

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3002

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 3001
          
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3003
